refactor navigation links and remove search box for improved layout and clarity

--- a/curatedpackages.html
+++ b/curatedpackages.html
@@ -393,9 +393,9 @@
           </li>
           <li class="nav-item dropdown"><a class="nav-link" href="about-us.html">ABOUT US</a>
           </li>
-          <li class="nav-item dropdown"><a class="nav-link" href="packages.html">PACKAGES</a>
+          <li class="nav-item dropdown"><a class="nav-link">PACKAGES</a>
             <ul class="dropdown-menu">
-              <li><a href="packages.html">EXCLUSIVE PACKAGES</a></li>
+              <li><a href="exclusivepackages.html">EXCLUSIVE PACKAGES</a></li>
               <li><a href="curatedpackages.html">CURATED PACKAGES</a></li>
             </ul>
           </li>
@@ -412,24 +412,16 @@
 
   <section class="popular-tours">
     <div class="container">
-      <div class="row">
-        <div class="section-title">
-          <h2>Indulge in the Extraordinary!</h2>
-          <!-- <img src="images/title-seperator.png" alt="Image"> -->
-          <!-- end section-title -->
-        </div>
-        <!-- end col-6 -->
-        <!-- <p class="section-desc">Dive into the heart of Goa with our specially curated travel packages. Whether you're seeking adventure, relaxation, culture, or a bit of everything, we have the perfect plan for you. From sun-kissed beaches and thrilling watersports to heritage trails and vibrant nightlife, experience Goa like never before.<br><br>
-                  Pick your ideal getaway, sit back, and let us handle the details—so you can simply enjoy the magic of Goa! 🌴✨
-                </p> -->
-        <!-- end col-6 -->
-        <!-- end col-6 -->
+      <div class="section-title">
+        <h2>Indulge in the Extraordinary!</h2>
+      </div>
+      <div class="row justify-content-center">
         <div class="col-lg-3">
           <div class="tour-box">
             <figure><img src="images/Packages/family.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Family Tour Packages</h3>
-              <a href="#" class="explore-more" data-package="Family Tour Packages">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Family Tour Packages">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -441,7 +433,7 @@
             <figure><img src="images/Packages/camp'.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Beach Camping</h3>
-              <a href="#" class="explore-more" data-package="Beach Camping Experiences">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Beach Camping Experiences">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -453,7 +445,7 @@
             <figure><img src="images/Packages/honeymoon.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Honeymoon Packages</h3>
-              <a href="#" class="explore-more" data-package="Honeymoon Packages">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Honeymoon Packages">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -465,7 +457,7 @@
             <figure><img src="images/Packages/yoga.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Yoga Packages</h3>
-              <a href="#" class="explore-more" data-package="Yoga Packages">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Yoga Packages">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -477,7 +469,7 @@
             <figure><img src="images/Packages/nature.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Nature Packages</h3>
-              <a href="#" class="explore-more" data-package="Nature Packages">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Nature Packages">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -489,7 +481,7 @@
             <figure><img src="images/Packages/group.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Group Packages</h3>
-              <a href="#" class="explore-more" data-package="Group Packages">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Group Packages">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -501,7 +493,7 @@
             <figure><img src="images/Packages/trekking.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Trekking Packages</h3>
-              <a href="#" class="explore-more" data-package="Trekking Packages">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Trekking Packages">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -530,7 +522,7 @@
             <div class="tour-content">
               <h3 class="tour-title">North Goa Beach Bliss Expedition
               </h3>
-              <a href="#" class="explore-more" data-package="North Goa Beach Bliss Expedition">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="North Goa Beach Bliss Expedition">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -542,7 +534,7 @@
             <figure><img src="images/Packages/north goa/2.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Hippie Trail Heritage Tour</h3>
-              <a href="#" class="explore-more" data-package="Hippie Trail Heritage Tour">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Hippie Trail Heritage Tour">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -555,7 +547,7 @@
             <div class="tour-content">
               <h3 class="tour-title">Fort to Fort North Goa Heritage Trail
               </h3>
-              <a href="#" class="explore-more" data-package="Fort to Fort North Goa Heritage Trail">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Fort to Fort North Goa Heritage Trail">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -568,7 +560,7 @@
             <div class="tour-content">
               <h3 class="tour-title">Nightlife Elite - Goa After Dark
               </h3>
-              <a href="#" class="explore-more" data-package="Nightlife Elite - Goa After Dark">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Nightlife Elite - Goa After Dark">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -581,7 +573,7 @@
             <div class="tour-content">
               <h3 class="tour-title">North Goa Wellness Escape
               </h3>
-              <a href="#" class="explore-more" data-package="North Goa Wellness Escape">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="North Goa Wellness Escape">READ MORE</a>
             </div>
             <!-- end tour-content -->
           </div>
@@ -607,7 +599,7 @@
             <figure><img src="images/Packages/southgoa/1.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">South Goa Serenity Sojourn</h3>
-              <a href="#" class="explore-more" data-package="South Goa Serenity Sojourn">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="South Goa Serenity Sojourn">READ MORE</a>
             </div>
           </div>
         </div>
@@ -617,7 +609,7 @@
             <figure><img src="images/Packages/southgoa/2.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Colonial Heritage Expedition</h3>
-              <a href="#" class="explore-more" data-package="Colonial Heritage Expedition">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Colonial Heritage Expedition">READ MORE</a>
             </div>
           </div>
         </div>
@@ -628,7 +620,7 @@
             <div class="tour-content">
               <h3 class="tour-title"> Luxury South Goa Retreat
               </h3>
-              <a href="#" class="explore-more" data-package="Luxury South Goa Retreat">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Luxury South Goa Retreat">READ MORE</a>
             </div>
           </div>
         </div>
@@ -638,7 +630,7 @@
             <figure><img src="images/Packages/southgoa/4.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Hidden Beaches of South Goa</h3>
-              <a href="#" class="explore-more" data-package="Hidden Beaches of South Goa">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Hidden Beaches of South Goa">READ MORE</a>
             </div>
           </div>
         </div>
@@ -648,7 +640,7 @@
             <figure><img src="images/Packages/southgoa/5.jpeg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title"> Bird Watcher's Paradise</h3>
-              <a href="#" class="explore-more" data-package="Bird Watcher's Paradise">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Bird Watcher's Paradise">READ MORE</a>
             </div>
           </div>
         </div>
@@ -668,7 +660,7 @@
             <figure><img src="images/Packages/EAST GOA/1.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Spice Plantation Immersion</h3>
-              <a href="#" class="explore-more" data-package="Spice Plantation Immersion">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Spice Plantation Immersion">READ MORE</a>
             </div>
           </div>
         </div>
@@ -678,7 +670,7 @@
             <figure><img src="images/Packages/EAST GOA/2.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Dudhsagar Falls Expedition</h3>
-              <a href="#" class="explore-more" data-package="Dudhsagar Falls Expedition">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Dudhsagar Falls Expedition">READ MORE</a>
             </div>
           </div>
         </div>
@@ -688,7 +680,7 @@
             <figure><img src="images/Packages/EAST GOA/3.jpeg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Ancient Temples of Goa</h3>
-              <a href="#" class="explore-more" data-package="Ancient Temples of Goa">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Ancient Temples of Goa">READ MORE</a>
             </div>
           </div>
         </div>
@@ -698,7 +690,7 @@
             <figure><img src="images/Packages/EAST GOA/4.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Wild Eastern Goa Safari</h3>
-              <a href="#" class="explore-more" data-package="Wild Eastern Goa Safari">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Wild Eastern Goa Safari">READ MORE</a>
             </div>
           </div>
         </div>
@@ -708,7 +700,7 @@
             <figure><img src="images/Packages/EAST GOA/5.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Eastern Goa River Expedition</h3>
-              <a href="#" class="explore-more" data-package="Eastern Goa River Expedition">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Eastern Goa River Expedition">READ MORE</a>
             </div>
           </div>
         </div>
@@ -728,7 +720,7 @@
             <figure><img src="images/Packages/beach-specific/1.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title"> Arambol Beach Wellness Retreat </h3>
-              <a href="#" class="explore-more" data-package="Arambol Beach Wellness Retreat">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Arambol Beach Wellness Retreat">READ MORE</a>
             </div>
           </div>
         </div>
@@ -738,7 +730,7 @@
             <figure><img src="images/Packages/beach-specific/2.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Palolem Beach Paradise</h3>
-              <a href="#" class="explore-more" data-package="Palolem Beach Paradise">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Palolem Beach Paradise">READ MORE</a>
             </div>
           </div>
         </div>
@@ -749,7 +741,7 @@
             <div class="tour-content">
               <h3 class="tour-title">Calangute Beach Club Experience
               </h3>
-              <a href="#" class="explore-more" data-package="Calangute Beach Club Experience">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Calangute Beach Club Experience">READ MORE</a>
             </div>
           </div>
         </div>
@@ -759,7 +751,7 @@
             <figure><img src="images/Packages/beach-specific/4.jpg" alt="Image"></figure>
             <div class="tour-content">
               <h3 class="tour-title">Morjim Beach Turtle Conservation Retreat</h3>
-              <a href="#" class="explore-more" data-package="Morjim Beach Turtle Conservation Retreat">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Morjim Beach Turtle Conservation Retreat">READ MORE</a>
             </div>
           </div>
         </div>
@@ -770,7 +762,7 @@
             <div class="tour-content">
               <h3 class="tour-title">Agonda Beach Romantic Getaway
               </h3>
-              <a href="#" class="explore-more" data-package="Agonda Beach Romantic Getaway">EXPLORE MORE</a>
+              <a href="#" class="explore-more" data-package="Agonda Beach Romantic Getaway">READ MORE</a>
             </div>
           </div>
         </div>
@@ -868,6 +860,7 @@
   <script src="js/wow.min.js"></script>
   <script src="js/odometer.min.js"></script>
   <script src="js/scripts.js"></script>
+  <script src="js/packagedetails.js"></script>
   <script src="js/curateddetails.js"></script>
 
 </body>
