--- a/contact.html
+++ b/contact.html
@@ -25,34 +25,6 @@
 </head>
 
 <body>
-  <div class="search-box">
-    <div class="container">
-      <div class="row">
-        <div class="col-12"> <span class="search-close-btn"><i class="fa fa-times"></i></span>
-          <h3>Make Quick Search to Find!</h3>
-          <form>
-            <div class="form-group"> <i class="fa fa-search"></i>
-              <input type="text" placeholder="Search Activities, Themes or Tours">
-            </div>
-            <!-- end form-group -->
-            <button type="submit">SEARCH</button>
-          </form>
-          <dl>
-            <dt>Suggestions <i class="fa fa-long-arrow-right"></i></dt>
-            <dd><a href="#">Adventure</a></dd>
-            <dd><a href="#">Nothern Lights</a></dd>
-            <dd><a href="#">Waterfalls</a></dd>
-            <dd><a href="#">Winter Tours</a></dd>
-            <dd><a href="#">Glaciar Walk</a></dd>
-          </dl>
-        </div>
-        <!-- end col-12 -->
-      </div>
-      <!-- end row -->
-    </div>
-    <!-- end container -->
-  </div>
-  <!-- end search-box -->
   <header class="header-int">
     <div class="container">
       <nav class="navbar dark"> <a href="index.html" class="navbar-brand"><img src="images/Packages/logo.png"
@@ -77,9 +49,9 @@
           </li>
           <li class="nav-item dropdown"><a class="nav-link" href="about-us.html">ABOUT US</a>
           </li>
-          <li class="nav-item dropdown"><a class="nav-link" href="packages.html">PACKAGES</a>
+          <li class="nav-item dropdown"><a class="nav-link">PACKAGES</a>
             <ul class="dropdown-menu">
-              <li><a href="packages.html">EXCLUSIVE PACKAGES</a></li>
+              <li><a href="exclusivepackages.html">EXCLUSIVE PACKAGES</a></li>
               <li><a href="curatedpackages.html">CURATED PACKAGES</a></li>
             </ul>
           </li>
