--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
           </li>
           <li class="nav-item dropdown"><a class="nav-link" href="about-us.html">ABOUT US</a>
           </li>
-          <li class="nav-item dropdown"><a class="nav-link" href="packages.html">PACKAGES</a>
+          <li class="nav-item dropdown"><a class="nav-link">PACKAGES</a>
             <ul class="dropdown-menu">
-              <li><a href="packages.html">EXCLUSIVE PACKAGES</a></li>
+              <li><a href="exclusivepackages.html">EXCLUSIVE PACKAGES</a></li>
               <li><a href="curatedpackages.html">CURATED PACKAGES</a></li>
             </ul>
           </li>
