refactor about us section for improved readability and layout; update CSS for better image alignment

--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Frolic | for Tour Operators & Travel Agencies">
   <meta name="keywords"
     content="tour, ice, trip, travel, agency, life, vacation, treking, boat, walking, climbing, transition, svg, html, css">
-      <!-- FAVICON -->
+  <!-- FAVICON -->
   <link rel="icon" type="image/svg+xml" href="ico/favicon.png" />
 
   <!-- CSS FILES -->
@@ -32,49 +32,50 @@
     }
 
     .story-section {
-  padding: 50px 200px;
-  display: flex;
-  justify-content: center;
-}
+      padding: 50px 200px;
+      display: flex;
+      justify-content: center;
+    }
 
-.story-container {
-  display: flex;
-  align-items: flex-start;
-  gap: 40px;
-}
+    .story-container {
+      display: flex;
+      align-items: flex-start;
+      gap: 40px;
+    }
 
-.story-image img {
-  width: 400px; /* Smaller image width */
-  height: auto;
-  border-radius: 12px;
-  object-fit: cover;
-  flex: 1;
-}
+    .story-image img {
+      width: 400px;
+      /* Smaller image width */
+      height: auto;
+      border-radius: 12px;
+      object-fit: cover;
+      flex: 1;
+    }
 
-.story-content {
-  flex: 2;
-}
+    .story-content {
+      flex: 2;
+    }
 
-.story-content h5 {
-  font-size: 14px;
-  letter-spacing: 1px;
-  color: #555;
-  text-transform: uppercase;
-  margin-bottom: 5px;
-}
+    .story-content h5 {
+      font-size: 14px;
+      letter-spacing: 1px;
+      color: #555;
+      text-transform: uppercase;
+      margin-bottom: 5px;
+    }
 
-.story-content h2 {
-  font-size: 40px;
-  margin-bottom: 15px;
-  color: #222;
-}
+    .story-content h2 {
+      font-size: 40px;
+      margin-bottom: 15px;
+      color: #222;
+    }
 
-.story-content p {
-  font-size: 18px;
-  line-height: 1.6;
-  color: #444;
-  margin-bottom: 15px;
-}
+    .story-content p {
+      font-size: 18px;
+      line-height: 1.6;
+      color: #444;
+      margin-bottom: 15px;
+    }
 
     .title {
       font-size: 60px;
@@ -128,7 +129,7 @@
     }
 
     .vision {
-      background-color: black;
+      background-color: #3a2a1d;
     }
 
     .responsibility {
@@ -136,7 +137,7 @@
     }
 
     .ethics {
-      background-color: black;
+      background-color: #3a2a1d;
     }
 
     .reliability {
@@ -144,7 +145,7 @@
     }
 
     .excellence {
-      background-color: black;
+      background-color: #3a2a1d;
     }
 
     /* Value Content */
@@ -241,7 +242,7 @@
   </section>
   <!-- end about-us -->
 
-    <section class="story-section">
+  <section class="story-section">
     <div class="story-container">
       <div class="story-image">
         <img src="images/Packages/aboutstory.jpg" alt="Sunset at Goa Beach" />
@@ -249,12 +250,14 @@
       <div class="story-content">
         <h5>OUR STORY</h5>
         <h2>Where Passion Meets Paradise</h2>
-        <p>
-          Safari Sutra Holidays began with a simple belief: that Goa is more than just beaches and parties—it's a complex tapestry of culture, adventure, tranquility, and natural wonder waiting to be experienced authentically.</p>
-<p>Our journey began when a group of travel enthusiasts from diverse backgrounds found themselves repeatedly returning to Goa, each time discovering new facets of this coastal paradise that tourists rarely experience. We realized that while millions visit Goa each year, few truly connect with its soul—the hidden waterfalls accessible only by forest trails, ancient temples nestled in village communities, pristine beaches unmarked on tourist maps, and the rich Indo-Portuguese heritage that flavors every aspect of Goan life.</p>
-<p>In 2014, Safari Sutra Holidays was born from this realization, and our signature brand "Chalo Goa" emerged as our promise to unveil the authentic Goa experience. The name "Safari Sutra" reflects our philosophy—"Safari" representing the journey of discovery, and "Sutra" embodying the thread that connects travelers to meaningful experiences.</p>
-<p>What began as curated adventure tours for friends soon expanded into a comprehensive travel service as word spread about our unique approach. Today, we take pride in having helped thousands of travelers—from solo adventurers to honeymooners to multi-generational families—discover the Goa that locals cherish.</p>
-        
+        <p>Safari Sutra Holidays was founded on the belief that Goa is more than just beaches and parties—it’s a land of culture, adventure, and hidden gems waiting to be explored authentically.</p>
+
+        <p>Our journey began when a group of passionate travelers uncovered Goa’s lesser-known wonders—hidden waterfalls, centuries-old temples, unmarked beaches, and a rich Indo-Portuguese heritage. Realizing most tourists only scratch the surface, we set out to create experiences beyond the ordinary.</p>
+
+        <p>In 2014, Safari Sutra Holidays was born, along with our signature brand Chalo Goa, dedicated to unveiling the authentic soul of this coastal paradise. The name reflects our vision—"Safari" symbolizes discovery, while "Sutra" connects travelers to meaningful experiences.</p>
+
+        <p>What started as adventure tours for friends soon grew into a full-fledged travel service. Today, we take pride in helping thousands—from solo adventurers to families—discover Goa through immersive, offbeat, and deeply local experiences.</p>
+
       </div>
     </div>
   </section>
@@ -264,10 +267,15 @@
       <div class="story-content">
         <h2>From Guests to Family</h2>
         <p>
-          At Chalo Goa, we don't have customers; we have guests who quickly become family. Our team comprises passionate Goa specialists—many born and raised here—who bring intimate knowledge of the region's terrain, culture, and hidden treasures. This local expertise allows us to create experiences that balance adventure with safety, excitement with relaxation, and tourist highlights with off-the-beaten-path authenticity.
+          At Chalo Goa, we don't have customers; we have guests who quickly become family. Our team comprises passionate
+          Goa specialists—many born and raised here—who bring intimate knowledge of the region's terrain, culture, and
+          hidden treasures. This local expertise allows us to create experiences that balance adventure with safety,
+          excitement with relaxation, and tourist highlights with off-the-beaten-path authenticity.
         </p>
         <p>
-          Our commitment to responsible tourism means we partner with local communities, employ local guides, support sustainable practices, and ensure that our presence benefits Goa's ecology and economy. We believe travel should enrich both the traveler and the destination.
+          Our commitment to responsible tourism means we partner with local communities, employ local guides, support
+          sustainable practices, and ensure that our presence benefits Goa's ecology and economy. We believe travel
+          should enrich both the traveler and the destination.
         </p>
       </div>
       <div class="story-image">
@@ -275,7 +283,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="core-values">
     <h2 class="title">OUR VALUES</h2>
     <div class="values-container">
